postgresql-common (167) UNRELEASED; urgency=medium

  * pg_conftool: Fix 'remove' operation. Spotted by François Henry, merci!

 -- Christoph Berg <myon@debian.org>  Thu, 12 Feb 2015 17:21:25 +0100

postgresql-common (166) unstable; urgency=medium

  * postgresql-common: Breaks: systemd (<< 204). postgresql@.service uses
    reload-related config options that are incompatible with the systemd
    version in wheezy. (Consider upgrading to the wheezy-backports version.)
  * pg_renamecluster: New tool to rename clusters.
  * pg_upgradecluster: --rename allows renaming the upgraded cluster.
  * pg_conftool: Allow to "edit" files.
  * PgCommon.pm, pg_lsclusters: Fix thinko which broke logging to
    /var/log/postgresql when log_destination was "syslog,stderr". The default
    logfile is now always used even if logging_collector is enabled; it
    receives the log messages produced before logging_collector is started.
  * t/020_create_sql_remove.t: Versions >= 9.0 are OOM-protected.

 -- Christoph Berg <myon@debian.org>  Thu, 05 Feb 2015 22:19:07 +0100

postgresql-common (165) unstable; urgency=medium

  * Debconf translation updates, thanks!
    + es by Manuel Venturi Porras Peralta. (Closes: #773598)

 -- Christoph Berg <myon@debian.org>  Sun, 04 Jan 2015 18:51:31 +0100

postgresql-common (164) unstable; urgency=medium

  * Init script: Always create /var/run/postgresql on start.
    (Closes: #772824)
  * Debconf translation updates, thanks!
    + pt by Ricardo Silva. (Closes: #767399)
  * t/100_upgrade_scripts.t: Incompatible with eatmydata, remove from
    LD_PRELOAD when detected.
  * t/170_extensions.t: Catch warning with chkpass on 9.5.
  * debian/supported-versions: Support jessie in backports and
    apt.postgresql.org, with 9.4 as default.
  * pgdg/apt.postgresql.org.sh: Support jessie.

 -- Christoph Berg <myon@debian.org>  Wed, 17 Dec 2014 20:00:04 +0100

postgresql-common (163) unstable; urgency=medium

  [ Martin Pitt ]